fix: header banner alignment

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -382,24 +382,9 @@ footer
         margin-top: 5px;
     }
 
-    .index-header-title-text > h1
-    {
-        font-size: 20px;
-    }
-
-    .index-header-p-right-text
-    {
-        margin-top: 10px;
-    }
-
     .index-header-p-e-text
     {
-        margin-top: 5px;
-    }
-
-    .index-header-p-e-text > h4
-    {
-        font-size: 15px;
+        margin-top: 70px;
     }
 
     #help-you
